--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,9 +3,11 @@ mysql-connector
 requests
 python-dotenv
 pandas
-pandas_ta
+#pandas_ta
 cfg_load
 krakenex
 pykrakenapi
 pytest
 scipy
+ta_signals~=0.0.294
+pyangles
